add first item of ul: phone number

--- a/contacts.html
+++ b/contacts.html
@@ -136,7 +136,13 @@
                             </div>
 
                             <div class="col-lg-4 office-details text-start">
-                                <ul class="ul"></ul>
+                                <ul class="ul">
+                                    <li>
+                                        &#128222;
+                                        <span id="call"><a href="#tel://+63-901-234-5678">+63-901-234-5678</a></span>
+                                    </li>
+                                    
+                                </ul>
 
                             </div>
 
