add second item of ul: company email

--- a/contacts.html
+++ b/contacts.html
@@ -141,7 +141,11 @@
                                         &#128222;
                                         <span id="call"><a href="#tel://+63-901-234-5678">+63-901-234-5678</a></span>
                                     </li>
-                                    
+
+                                    <li>
+                                        &#128231;<a href="support@hydrofarm.com">support@hydrofarm.com</a>
+                                    </li>
+
                                 </ul>
 
                             </div>
