--- a/contacts.html
+++ b/contacts.html
@@ -143,7 +143,7 @@
                                     </li>
 
                                     <li>
-                                        &#128231;<a href="support@hydrofarm.com">support@hydrofarm.com</a>
+                                        &#128231;<a href="mailto:support@hydrofarm.com">support@hydrofarm.com</a>
                                     </li>
 
                                 </ul>
