add third item in ul: company address

--- a/contacts.html
+++ b/contacts.html
@@ -146,6 +146,11 @@
                                         &#128231;<a href="mailto:support@hydrofarm.com">support@hydrofarm.com</a>
                                     </li>
 
+                                    <li>
+                                        <i class="material-icons">add_location</i>1 Rizal Park, Ermita, Manila, Metro
+                                        Manila, 0913
+                                    </li>
+
                                 </ul>
 
                             </div>
