--- a/contacts.html
+++ b/contacts.html
@@ -149,6 +149,11 @@
                                     <li>
                                         <i class="material-icons">add_location</i>1 Rizal Park, Ermita, Manila, Metro
                                         Manila, 0913
+
+                                        <iframe
+                                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.2743704944355!2d120.97192091527886!3d14.583435581405704!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397ca1cd1819401%3A0x1fcf5e00dfe8decc!2sThe%20Manila%20Hotel!5e0!3m2!1sen!2sph!4v1663767098612!5m2!1sen!2sph"
+                                            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                                     </li>
 
                                 </ul>
