--- a/events.html
+++ b/events.html
@@ -44,7 +44,7 @@
                             <a class="nav-link" href="faq.html">FAQs</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Events</a>
+                            <a class="nav-link" href="events.html">Events</a>
                         </li>
                         <!-- start of dropdown menu -->
                         <li class="nav-item dropdown">
@@ -70,7 +70,7 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link active contact-us" href="#">Contact Us</a>
+                            <a class="nav-link active contact-us" href="contacts.html">Contact Us</a>
                         </li>
 
                     </ul>
