--- a/faq.html
+++ b/faq.html
@@ -70,7 +70,7 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link active contact-us" href="#">Contact Us</a>
+                            <a class="nav-link active contact-us" href="contacts.html">Contact Us</a>
                         </li>
 
                     </ul>
