--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
                         <div class="item-container col-md-4">
                             <div class="item">
                                 <div class="item-content">
-                                    <img class="img-fluid" src="Images/Bezos-primary.png" alt="Bezos-img">
+                                    <img class="img-fluid" src="images/Bezos-primary.png" alt="Bezos-img">
                                     <div class="team-overlay">
                                         <p class="h6"><em>“If we can keep our competitors focused on us while we stay
                                                 focused on the customer,
                                                 ultimately we'll turn out all right.”</em></p>
                                         <div class="alt-image-container">
-                                            <img class="img-fluid" src="Images/Bezos-alt.png" alt="bezos-alt-img"
+                                            <img class="img-fluid" src="images/Bezos-alt.png" alt="bezos-alt-img"
                                                 class="alt-image">
                                         </div>
                                     </div>
@@ -187,13 +187,13 @@
                         <div class="col-md-4 item-container">
                             <div class="item">
                                 <div class="item-content">
-                                    <img class="img-fluid" src="Images/Beast-primary.png" alt="Mr.Beast-img">
+                                    <img class="img-fluid" src="images/Beast-primary.png" alt="Mr.Beast-img">
                                     <div class="team-overlay">
                                         <p class="h6"><em>“My overarching goal in life is to make a lot of money and
                                                 then before I die, give it
                                                 away.”</em></p>
                                         <div class="alt-image-container">
-                                            <img class="img-fluid" src="Images/Beast-alt.png" alt="beast-alt-img"
+                                            <img class="img-fluid" src="images/Beast-alt.png" alt="beast-alt-img"
                                                 class="alt-image">
                                         </div>
                                     </div>
@@ -207,12 +207,12 @@
                         <div class="col-md-4 item-container">
                             <div class="item">
                                 <div class="item-content">
-                                    <img class="img-fluid" src="Images/Gates-primary.png" alt="Gates-img">
+                                    <img class="img-fluid" src="images/Gates-primary.png" alt="Gates-img">
                                     <div class="team-overlay">
                                         <p class="h6"><em>“Your most unhappy customers are your greatest source of
                                                 learning.”</em>></p>
                                         <div class="bio">
-                                            <img class="img-fluid" src="Images/Gates-alt.png" alt="gates-alt-img"
+                                            <img class="img-fluid" src="images/Gates-alt.png" alt="gates-alt-img"
                                                 class="alt-image">
                                         </div>
                                     </div>
@@ -226,14 +226,14 @@
                         <div class="col-md-4 item-container">
                             <div class="item">
                                 <div class="item-content">
-                                    <img class="img-fluid" src="Images/Zuckerberg-primary.png" alt="Zuckerberg-img">
+                                    <img class="img-fluid" src="images/Zuckerberg-primary.png" alt="Zuckerberg-img">
                                     <div class="team-overlay">
                                         <p class="h6"><em>“Ideas don't come out fully formed , they only become clearer
                                                 as you work on them"</em>
                                             <!-- <span>My interest in hydroponics started in Farmville.</span> -->
                                         </p>
                                         <div class="bio">
-                                            <img class="img-fluid" src="Images/Zuckerberg-alt.png"
+                                            <img class="img-fluid" src="images/Zuckerberg-alt.png"
                                                 alt="Zuckerberg-alt-img" class="alt-image">
                                         </div>
                                     </div>
