add anchor contacts.html on all cta buttons

--- a/events.html
+++ b/events.html
@@ -64,6 +64,7 @@
                                 </li>
                                 <li><a class="dropdown-item" href="#">Join Our Partnership Program</a></li>
                             </ul>
+                            
                             <!-- end of dropdown menu -->
 
                         </li>
@@ -275,7 +276,7 @@
                         <div class="cta">
                             <p>
                                 Events are specially designed to educate and inspire. <a class="contact-us about-us-cta"
-                                    href="#contact-form">Contact us</a> to book your farm
+                                    href="contacts.html">Contact us</a> to book your farm
                                 tour today!
                             </p>
                         </div>
