update home page cta

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 Hydrofarm&copy; aims to make
                                 hydroponics known better and provide assistance to those interested to get into it. What
                                 are you waiting
-                                for? <a class="contact-us about-us-cta" href="#contacts.html">Contact us</a> now!</p>
+                                for? <a class="contact-us about-us-cta" href="contacts.html">Contact us</a> now!</p>
                         </div>
 
                     </div>
