--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="montage-overlay"></div>
 
             <video playsinline="playsinline" autoplay loop muted class="motageVideos">
-                <source src="videos/hydroponics-montage.mp4" type="video/mp4">
+                <source src="videos/vid-montage.mp4" type="video/mp4">
             </video>
 
             <!-- The header content -->
