change class name of nav cta to contact-us-cta; chang body cta to about-us-cta

--- a/contacts.html
+++ b/contacts.html
@@ -71,7 +71,7 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link active contact-us" href="#">Contact Us</a>
+                            <a class="nav-link active contact-us-cta" href="#">Contact Us</a>
                         </li>
 
                     </ul>
