--- a/events.html
+++ b/events.html
@@ -72,7 +72,7 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link active contact-us" href="contacts.html">Contact Us</a>
+                            <a class="nav-link active contact-us-cta" href="contacts.html">Contact Us</a>
                         </li>
 
                     </ul>
@@ -275,7 +275,7 @@
 
                         <div class="cta">
                             <p>
-                                Events are specially designed to educate and inspire. <a class="contact-us about-us-cta"
+                                Events are specially designed to educate and inspire. <a class="contact-us-cta about-us-cta"
                                     href="contacts.html">Contact us</a> to book your farm
                                 tour today!
                             </p>
