--- a/faq.html
+++ b/faq.html
@@ -71,7 +71,7 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link active contact-us" href="contacts.html">Contact Us</a>
+                            <a class="nav-link active contact-us-cta" href="contacts.html">Contact Us</a>
                         </li>
 
                     </ul>
