--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
                         <li class="nav-item">
-                            <a class="nav-link active contact-us" href="contacts.html">Contact Us</a>
+                            <a class="nav-link active contact-us-cta" href="contacts.html">Contact Us</a>
                         </li>
 
                     </ul>
@@ -136,7 +136,7 @@
                                 Hydrofarm&copy; aims to make
                                 hydroponics known better and provide assistance to those interested to get into it. What
                                 are you waiting
-                                for? <a class="contact-us about-us-cta" href="contacts.html">Contact us</a> now!</p>
+                                for? <a class="contact-us-cta about-us-cta" href="contacts.html">Contact us</a> now!</p>
                         </div>
 
                     </div>
