--- a/faq.html
+++ b/faq.html
@@ -101,7 +101,7 @@
 
                 <!-- Accordion collapse -->
                 <div class="collapse-container container row">
-                    <div class="col-lg-4 text-start" id="parent-btn">
+                    <div class="col-lg-4 text-start">
                         <div>
                             <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start" type="button"
                                 data-bs-toggle="collapse" data-bs-target="#collapse-definition" aria-expanded="false"
