give faq section parent div an id of 'expanded-group'

--- a/faq.html
+++ b/faq.html
@@ -100,7 +100,7 @@
                 </div>
 
                 <!-- Accordion collapse -->
-                <div class="collapse-container container row">
+                <div class="collapse-container container row" id="expanded-group">
                     <div class="col-lg-4 text-start">
                         <div>
                             <button class="btn faq-btn col-lg-12 col-md-12 col-sm-12 text-start" type="button"
