give all expanded element inside the accordion an attribute of data-bs-parent='#expanded-group'

--- a/faq.html
+++ b/faq.html
@@ -109,7 +109,7 @@
                                 What is hydroponics?
                             </button>
 
-                            <div class="collapse sm-screen-collapse" id="collapse-definition">
+                            <div class="collapse sm-screen-collapse" id="collapse-definition" data-bs-parent="#expanded-group">
                                 <div class="card card-body">
                                     Hydroponics is the method of growing plants in nutrient solutions (with or
                                     without an inert medium such as soil) to provide mechanical support.
@@ -125,7 +125,7 @@
                                 What are the different types of hydroponics system?
                             </button>
 
-                            <div class="collapse sm-screen-collapse" id="collapse-types">
+                            <div class="collapse sm-screen-collapse" id="collapse-types" data-bs-parent="#expanded-group">
                                 <div class="card card-body">
                                     <ul style="list-style-position: inside; list-style-type: none;">
                                         <li>Wicking</li>
@@ -145,7 +145,7 @@
                                 Difference of hydroponics vs other farming methods
                             </button>
 
-                            <div class="collapse sm-screen-collapse" id="collapse-vs">
+                            <div class="collapse sm-screen-collapse" id="collapse-vs" data-bs-parent="#expanded-group">
                                 <div class="card card-body">
                                     <ul style="list-style-position: inside; list-style-type: none;">
                                         <li>When plants are grown in a hydroponic system, they grow at a rate of 30% -
@@ -170,7 +170,7 @@
                                 Other non-traditional farming methods:
                             </button>
 
-                            <div class="collapse sm-screen-collapse" id="collapse-other">
+                            <div class="collapse sm-screen-collapse" id="collapse-other" data-bs-parent="#expanded-group">
                                 <div class="card card-body">
                                     <ul style="list-style-position: inside; list-style-type: none;">
                                         <li>Aeroponics</li>
@@ -188,7 +188,7 @@
                                 hydroponics:
                             </button>
 
-                            <div class="collapse sm-screen-collapse" id="collapse-myths">
+                            <div class="collapse sm-screen-collapse" id="collapse-myths" data-bs-parent="#expanded-group">
                                 <div class="card card-body">
                                     <ul style="list-style-position: inside; list-style-type: none;">
                                         <li><b>You will need a lot of space to start:</b>
@@ -219,14 +219,14 @@
 
                     <!-- accordion expanded -->
                     <div class="col-lg-8 lg-screen-collapse">
-                        <div class="collapse" id="collapse-definition">
+                        <div class="collapse" id="collapse-definition" data-bs-parent="#expanded-group">
                             <div class="card card-body">
                                 Hydroponics is the method of growing plants in nutrient solutions (with or
                                 without an inert medium such as soil) to provide mechanical support.
                             </div>
                         </div>
 
-                        <div class="collapse" id="collapse-types">
+                        <div class="collapse" id="collapse-types" data-bs-parent="#expanded-group">
                             <div class="card card-body">
                                 <ul style="list-style-position: inside; list-style-type: none;">
                                     <!--transfer this style in css-->
@@ -240,7 +240,7 @@
 
                         </div>
 
-                        <div class="collapse" id="collapse-vs">
+                        <div class="collapse" id="collapse-vs" data-bs-parent="#expanded-group">
                             <div class="card card-body">
                                 <ul style="list-style-position: inside; list-style-type: none;">
                                     <li>When plants are grown in a hydroponic system, they grow at a rate of 30% -
@@ -257,7 +257,7 @@
                             </div>
                         </div>
 
-                        <div class="collapse" id="collapse-other">
+                        <div class="collapse" id="collapse-other" data-bs-parent="#expanded-group">
                             <div class="card card-body">
                                 <ul style="list-style-position: inside; list-style-type: none;">
                                     <li>Aeroponics</li>
@@ -267,7 +267,7 @@
                             </div>
                         </div>
 
-                        <div class="collapse" id="collapse-myths">
+                        <div class="collapse" id="collapse-myths" data-bs-parent="#expanded-group">
                             <div class="card card-body">
                                 <ul style="list-style-position: inside; list-style-type: none;">
                                     <li><b>You will need a lot of space to start:</b>
